# Stanford-XCS234

./: LICENSE  README.md
A1/: README.md  meta.json  pyproject.toml  requirements.cuda.txt  requirements.txt
A1/src/: environment.yml  environment_cuda.yml  submission.py
