[project]
name = "xcs234"
version = "0.1.0"
description = "Reinforcement learning environment"
requires-python = ">=3.12"
dependencies = [
    "pip==26.0",
    "notebook==7.5.5",
    "ffmpeg==1.4",
    "moviepy==1.0.3",
    "setuptools==81.0.0",
    "matplotlib==3.10.8",
    "tqdm==4.67.3",
    "numpy==2.4.4",
    "pandas==3.0.2",
    "scipy==1.17.1",
    "pyglet==2.1.14",
    "gymnasium[mujoco]==1.2.3",
    "stable_baselines3[extra]==2.8.0"
]
